# SimpleAMQP

./: .gitignore  CMakeLists.txt  README.md
include/: Common.hpp  CommunicationInterface.hpp  PersistentStorageInterface.hpp  QPIDCommunication.hpp  TextStorage.hpp
src/: QPIDCommunication.cpp  TextStorage.cpp
tests/: CommunicationTest.cpp  StorageTest.cpp
